# irminsul-android

./: .gitignore  .gitmodules  README.md  build.gradle  build.gradle.kts  gradle.properties  gradlew  keystore.properties  settings.gradle  settings.gradle.kts  sync-game-data.sh
.github/workflows/: build.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro  release.keystore
app/src/androidTest/java/com/github/konkers/irminsul/: CaptureServiceTest.kt  MainActivityTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/game_data/: AvatarExcelConfigData.json  ReliquaryExcelConfigData.json  ReliquaryMainPropExcelConfigData.json  VERSION  WeaponExcelConfigData.json  database.json  gi_keys.json
app/src/main/cpp/: CMakeLists.txt  capture_engine.cpp
app/src/main/java/com/github/konkers/irminsul/: CaptureService.kt  IrminsulApp.kt  MainActivity.kt  MainViewModel.kt
app/src/main/java/com/github/konkers/irminsul/data/: GameDatabase.kt  GameDatabaseRepository.kt
app/src/main/java/com/github/konkers/irminsul/ui/theme/: Color.kt  Theme.kt
app/src/main/java/com/irminsul/: CaptureService.kt  MainActivity.kt
app/src/main/java/com/irminsul/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
gradle/: libs.versions.toml
rust-parser/: Cargo.toml
rust-parser/src/: lib.rs
rustlib/: Cargo.toml  build.rs
rustlib/auto-artifactarium/: Cargo.toml  README.md
rustlib/auto-artifactarium/protos/: protos.proto
rustlib/auto-artifactarium/src/: connection.rs  crypto.rs  cs_rand.rs  kcp.rs  lib.rs  main.rs  unk_util.rs
rustlib/src/: lib.rs
scripts/: build_all.sh  build_cpp.sh  build_database.py  build_rust.sh
