[package]
name = "irminsul-android-parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# 本地依赖 auto-artifactarium（通过 submodule）
auto-artifactarium = { path = "../auto-artifactarium" }

# JNI 支持
jni = "0.21.1"

# Protobuf（与 auto-artifactarium 保持版本一致）
protobuf = "3.7"

# 日志
log = "0.4"
android_logger = "0.14"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
