[package]
name = "irminsul-parser"
version = "0.1.0"
edition = "2021"
description = "Rust library for parsing Genshin Impact network packets - powered by auto-artifactarium"

[lib]
name = "irminsul_parser"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# 基础依赖
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# auto-artifactarium 依赖 (从本地 submodule 引入)
auto-artifactarium = { path = "./auto-artifactarium" }

# Android平台依赖
[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7"

[build-dependencies]
protobuf-codegen = "3"

[features]
default = []